[project]
name = "videoqa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "langchain>=1.1.0",
    "langchain-community",
    "langchain-openai",
    "certifi",
    "streamlit>=1.52.0",
    "youtube-transcript-api>=1.2.3",
    "langchain-yt-dlp>=0.0.8",
    "yt-dlp>=2025.11.12",
    "langchain-text-splitters>=1.0.0",
    "langchain-classic>=1.0.0",
]
